--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {font-size: 100%;}
 body {font-size: 1em;}
 body {background-color: #F9C416; padding: 0; margin: 0;}
 a {color: initial; text-decoration: none;}
+button {outline: none;}
 
 header {display: flex; justify-content: center; margin-top: 50px; flex-direction: column; align-items: center;}
 header img {}
