--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ img {width: 40%;}
 /*https://codepen.io/jpschwinghamer/pen/QwwbgO*/
 .snow-container {
   position: absolute;
-  height: 99%;
+  height: 3000px;
   width: 100%;
   max-width: 100%;
   top: 0;
